All Star Break Update: UI Tweaking, detailed stat changes

--- a/index.html
+++ b/index.html
@@ -4,20 +4,24 @@
 <head>
 	<title>ESPN NHL 2K5: A Retrospective</title>
 	<meta charset="utf-8" />
-	<link href="styles.css" rel="stylesheet" />
+	<link href="stylesNHL.css" rel="stylesheet" />
 	<script src="NHLInfo.js" defer></script>
-	<script src="results.js" defer></script>
+	<script src="resultsNHL.js" defer></script>
 </head>
 
 <body>
-	<header> <img src="NHL2K5_art.png" alt="NFL 2k3" id="NHL" />
+	<header> <img src="https://nfl2k3fantasyseasons.neocities.org/NHL2K5_art.png" alt="NFL 2k3" id="NHL" />
 		<h1 id="title">ESPN NHL 2K5: A Retrospective</h1>
-		<p id="subtitle"> This site contains the records from my regular fantasy season in  ESPN NHL 2K5 for the Playstation 2 (Last Updated: 2/17/2021)
+		<p id="subtitle"> This site contains the records from my regular fantasy season in  ESPN NHL 2K5 for the Playstation 2 (Last Updated: 3/4/2021)
 			<br><br> Player-controlled Teams are denoted in bold, colored lettering
-			<br><br> Eastern and Western conference logos number represents a division's collective wins</p>
+			<br><br> Colored bar on the right side represents the adjacent division's collective wins
+			<br><br>
+		Check out my other game seasons with the links below </p>
 <ul>
   <li><a href="https://nfl2k3fantasyseasons.neocities.org/">NFL 2K3 Retrospective</a></li>
   <li><a href="mailto:mrobillard@qmail.qcc.edu">Contact</a></li>
+  <li><a href="https://nfl2k3fantasyseasons.neocities.org/NHLRetro.html">ESPN NHL 2K5 Retrospective</a></li>
+  <li><a href="https://nfl2k3fantasyseasons.neocities.org/NFL2K5.html">ESPN NFL 2K5 Retrospective</a></li>
 </ul>
 	</header>
 	<section> </section>
